2006-05-19  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/tga.c: gracefully handle incorrect alpha
	info in header; fixes bug #306675.

2006-05-19  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpitem-linked.h: remove enum GimpItemLinkedMask...

	* app/core/core-enums.[ch]: ...and add it here as GimpItemTypeMask.
	Renamed enum GimpImageResizeLayers to GimpItemSet.

	* app/core/gimpitem-linked.[ch]
	* app/core/gimpimage-resize.[ch]
	* app/dialogs/resize-dialog.[ch]
	* app/actions/image-commands.c
	* app/actions/layers-commands.c
	* app/tools/gimpeditselectiontool.c: changed accordingly.

2006-05-19  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/convert.pdb
	* tools/pdbgen/pdb/image.pdb: do not use enum values in C syntax
	to describe the image mode.

	* app/pdb/convert_cmds.c
	* app/pdb/image_cmds.c
	* libgimp/gimpconvert_pdb.c
	* libgimp/gimpimage_pdb.c: regenerated.

2006-05-19  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/app.pl: turn c_style_procedure_names() in
	$proc->{help} into 'canonical-procedure-names'.

	* tools/pdbgen/pdb/color.pdb: std_pdb_deprecated() expects
	canonical procedure names.

	* app/pdb/color_cmds.c
	* app/pdb/drawable_cmds.c
	* app/pdb/drawable_transform_cmds.c
	* app/pdb/edit_cmds.c
	* app/pdb/paths_cmds.c
	* app/pdb/progress_cmds.c: regenerated.

2006-05-19  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptransformoptions.[ch]: removed one of the two
	constrain properties.

	* app/tools/gimprotatetool.c
	* app/tools/gimptransformtool.c: changed accordingly.

	* app/tools/gimpscaletool.c: sync "constrain" with the size-box's
	"keep-aspect" property.

2006-05-19  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpsizebox.c: connect to the chain-button and
	update the "keep-aspect" property when it is toggled.

2006-05-19  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpaligntool.c (gimp_align_tool_register): actually
	use the new tool icon.

2006-05-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
