@@ -26,6 +26,10 @@
    (self == min && (! modified_flag))   ; modified_flag holds history of update
    In other word, pixel itself is not a neighbor of it.
 */
+/*
+   in response to bug #156545, after lengthy discussion, the meanings of "dilate"
+   and "erode" are being swapped -- 19 May 2006.
+*/
 
 #include "config.h"
 
@@ -324,9 +328,9 @@ run (const gchar      *name,
           vpvals.upper_limit         = 255;
 
           if (strcmp (name, ERODE_PROC) == 0)
-            vpvals.propagate_mode = 0;
-          else if (strcmp (name, DILATE_PROC) == 0)
             vpvals.propagate_mode = 1;
+          else if (strcmp (name, DILATE_PROC) == 0)
+            vpvals.propagate_mode = 0;
         }
       break;
 
@@ -350,9 +354,9 @@ run (const gchar      *name,
           vpvals.upper_limit         = 255;
 
           if (strcmp (name, ERODE_PROC) == 0)
-            vpvals.propagate_mode = 0;
-          else if (strcmp (name, DILATE_PROC) == 0)
             vpvals.propagate_mode = 1;
+          else if (strcmp (name, DILATE_PROC) == 0)
+            vpvals.propagate_mode = 0;
         }
       break;
 
